# MillerRabin-GPU

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  example.txt  example_big.txt  example_big_1.txt  example_big_2.txt  example_big_3.txt  example_pp.txt  example_small.txt  gen_candidates  generate_candidates.cu  params.cmake.example  run.sh
docs/: architecture.md  backends.md  building.md  configuration.md  input-format.md  integration.md
src/: batch_mod_ctx.cu  batch_mod_ctx.cuh  bench_mr_gpu.cu  candidate.cuh  config.h.in  constants.h  correctness_tests.cuh  cpu_runner.cu  cpu_runner.h  equation.h  input_parser.cu  input_parser.h  miller_rabin_runner.cu  miller_rabin_runner.cuh  mr_internals.cu  mr_internals.cuh
src/helpers/: bench_ops.cu  bench_ops.cuh  gmp_helpers.cuh  mod_perf.cu  time_format.h  timers.cuh
src/lib/gpuntt/: ntt_merge_intt_fused.cu  ntt_merge_intt_fused.cuh
src/ops/: limb_storage.cuh
src/ops/carry/: carry_norm.cu
src/ops/mul/: fft_cufft.cu  fft_cufft.cuh  fft_ffnt.cu  fft_ffnt.cuh  fft_gpufft.cu  fft_gpufft.cuh  multiplier.cuh  ntt_4step.cu  ntt_4step.cuh  ntt_check.cuh  ntt_merge.cu  ntt_merge.cuh
src/ops/shift/: shift.cu  shift.cuh
src/ops/sub/: sub.cu  sub.cuh
src/perf/: perf_node.cuh  perf_timer.cuh
src/reductions/: barrett.cu  montgomery.cu
